chat scrollbar fixed

--- a/src/app.css
+++ b/src/app.css
@@ -269,13 +269,30 @@ a {
   overflow: scroll;
 }
 
+.chat__content__reverse {
+  display: flex;
+  flex-direction: column-reverse;
+  height: 80vh;
+  width: 90vw;
+  padding: 0.5rem 0.5rem;
+  border: #1AD475 solid 2px;
+  align-items: center;
+  justify-content: center;
+  overflow: scroll;
+}
+
 @media (min-width: 600px) {
   .chat__content {
     height: 100%;
     width: 100%;
   }
+  .chat__content__reverse {
+    height: 100%;
+    width: 100%;
+  }
 }
 
+/* Má deleta? */
 .chat__content--after-login {
   display: flex;
   flex-direction: column;
@@ -354,7 +371,6 @@ input:focus {
     margin-left: 1rem;
     margin-right: 1rem;
 }
-
 
 
 .chat__input {
